[gd_scene load_steps=9 format=3 uid="uid://bfupgidqu24r1"]

[ext_resource type="Script" path="res://game.gd" id="1_hxirs"]
[ext_resource type="Script" path="res://scenes/SceneManager.gd" id="3_jjlmg"]
[ext_resource type="PackedScene" uid="uid://bsq8kcfy5acg5" path="res://scenes/menus/start_menu.tscn" id="4_e1sqp"]
[ext_resource type="Script" path="res://maze_generation/MazeGenerator.gd" id="4_kpke4"]
[ext_resource type="Script" path="res://UI/UIManager.gd" id="5_p0hqd"]
[ext_resource type="PackedScene" uid="uid://b8xthppp1k7fo" path="res://UI/game_timer.tscn" id="6_tuvjb"]
[ext_resource type="Script" path="res://player/PlayerManager.gd" id="7_xvrln"]

[sub_resource type="GDScript" id="GDScript_i7peb"]
script/source = "extends Node2D

var Enemy = [preload(\"res://characters/enemies/enemy1/enemy1.tscn\"), preload(\"res://characters/enemies/enemy2/enemy2.tscn\"), preload(\"res://characters/enemies/enemy3/enemy3.tscn\")]

func spawn_enemies(number: int):
	
	var spawns = get_tree().get_nodes_in_group(\"enemy_spawns\")
	if spawns.size() == 0:
		return
	
	for n in range(number):
		var id_enemy = randi_range(0,2)
		var spawn = spawns[randi()%spawns.size()]
		spawns.erase(spawn)
		var enemy = Enemy[id_enemy].instantiate()
		enemy.position = spawn.position
		enemy.add_to_group(\"enemies\")
		add_child(enemy)

func clear_enemies():
	var enemies = get_tree().get_nodes_in_group(\"enemies\")
	for enemy in enemies:
		enemy.queue_free()
"

[node name="Game" type="Node2D"]
y_sort_enabled = true
position = Vector2(1, 0)
script = ExtResource("1_hxirs")

[node name="SceneManager" type="Node2D" parent="."]
script = ExtResource("3_jjlmg")

[node name="PlayerManager" type="Node2D" parent="SceneManager"]
script = ExtResource("7_xvrln")

[node name="StartMenu" parent="SceneManager" instance=ExtResource("4_e1sqp")]
position = Vector2(2, 2)

[node name="MazeGenerator" type="TileMap" parent="SceneManager"]
format = 2
script = ExtResource("4_kpke4")

[node name="EnemyManager" type="Node2D" parent="SceneManager"]
script = SubResource("GDScript_i7peb")

[node name="UIManager" type="CanvasLayer" parent="."]
script = ExtResource("5_p0hqd")

[node name="GameTimer" parent="UIManager" instance=ExtResource("6_tuvjb")]
texture_filter = 2
offset_left = 1.0
offset_right = 1.0

[connection signal="start_game" from="SceneManager/StartMenu" to="." method="start_game"]
